--- a/app/views/anios_escolares/edit.html.erb
+++ b/app/views/anios_escolares/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing anio_escolar</h1>
+<div data-role="header">
+    <h1>Editar año escolar</h1>
+    <%= link_to 'Regresar', anios_escolares_path, "data-icon" => "back", "class" => "ui-btn-left", "data-mini" => "true" %>
+</div>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @anio_escolar %> |
-<%= link_to 'Back', anios_escolares_path %>
