--- a/app/views/asistencias/consultar.html.erb
+++ b/app/views/asistencias/consultar.html.erb
@@ -6,12 +6,12 @@
   <% seccion = "" %>
   <% fechaI = "" %>
   <% fechaF = "" %>
-  <% tipo_movimiento = "" %>
+  <% tipomovimiento = "" %>
 <% else %>
   <% seccion = params[:seccion_id] %>
   <% fechaI = params[:fechaI] %>
   <% fechaF = params[:fechaF] %>
-  <% tipo_movimiento = params[:tipo_movimento] %>
+  <% tipomovimiento = params[:tipomovimento_id] %>
 <% end %>
 
 <div data-role="content">
@@ -23,7 +23,7 @@
         Sección: <%= collection_select(:seccion, :id, Seccion.all, :id, :grado_seccion, {:selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
       </li>
       <li data-role="fieldcontain">
-        Movimiento: <%= collection_select(:tipo_movimiento, tipo_movimiento, ListaValor.where("tabla=7"), :item, :descripcion, {:prompt => ':: Seleccione ::', :selected => :tipo_movimiento}, {"data-mini" => "true"}) %>
+        Movimiento: <%= collection_select(:tipomovimiento,:id, ListaValor.where("tabla=7"), :item, :descripcion, {:prompt => ':: Seleccione ::', :selected => tipomovimiento}, {"data-mini" => "true", :name => "tipomovimiento_id"}) %>
       </li>
     <li data-role="fieldcontain">
       <%= submit_tag "Buscar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true", :name => nil %>
