--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -21,9 +21,9 @@
     <script src="/assets/js/jquery-ui/jquery.effects.slide.min.js" type="text/javascript"></script>
     <script src="/assets/js/jquery-ui/jquery.ui.mouse.min.js" type="text/javascript"></script>
     <script src="/assets/js/jquery-ui/jquery.ui.sortable.min.js" type="text/javascript"></script>
-    <script src="/assets/js/table/jquery.dataTables.min.js" type="text/javascript"></script>
+    <!--script src="/assets/js/table/jquery.dataTables.min.js" type="text/javascript"></script-->
     <!-- END: load jquery -->
-    <script type="text/javascript" src="/assets/js/table/table.js"></script>
+    <!--script type="text/javascript" src="/assets/js/table/table.js"></script-->
     <script src="/assets/js/setup.js" type="text/javascript"></script>
     <script type="text/javascript">
 
