--- a/app/views/menus/main.html.erb
+++ b/app/views/menus/main.html.erb
@@ -83,6 +83,18 @@
         <li><a href="<%= perfiles_path %>">Perfiles</a></li>
         <li><a href="<%= usuarios_path %>">Usuarios</a></li>
       <% end %>
+        
+        
+       <% if [1,2,3].include? current_user.perfil_id %>        
+        <li data-role="list-divider" data-icon="false" data-mini="true">
+          Notas
+        </li>
+        <% if [1,3].include? current_user.perfil_id %>
+          <li><a href="<%= cargar_notas_path %>">Cargar</a></li>
+        <% end %>
+          
+        <li><a href="<%= notas_path %>">Consultar</a></li>
+      <% end %> 
     </ul>
     
   </div><!--/content-primary -->	
