--- a/app/views/notas/index.html.erb
+++ b/app/views/notas/index.html.erb
@@ -16,9 +16,7 @@
          <div data-role="fieldcontain">
             <div style="text-align: left;">
               N° DNI:  <%= text_field_tag(:dni, dni, "data-mini" => "true") %>
-            </div>
-<br/>
-            <div>
+            
               <%= submit_tag "Buscar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true", :name => nil %>
             </div>
           </div>         
@@ -34,7 +32,7 @@
           <% if !alumno.nil? %>
             <%= alumno.apellidos_nombres %>
             <br/>
-            
+            <%= alumno.grado_seccion %>
           <% end %>
         </div>
       <% end %>
@@ -42,22 +40,25 @@
     
     <div>     
       <% if !alumno.nil? %>
-      <table style="border-width: 1px; border-style: solid; width: 100%">
-        <tr>
-          <th style="border-width: 1px; border-style: solid; width: 60%">Curso</th>
-          <th style="border-width: 1px; border-style: solid; width: 30%">Tipo de nota</td>
-          <th style="border-width: 1px; border-style: solid; width: 10%">Nota</th>
-        </tr>
-            <% @notas.each do |nota| %>
-              <tr>
-                <td style="width: 60%"><%= Curso.find(nota.curso_id).descripcion %></td>
-                <td style="width: 30%"><%= TipoNota.find(nota.tipo_nota_id).descripcion %></td>
-                <td style="width: 10%"><%= nota.nota %></td>
-              </tr>
-            <% end %> 
-       </table>   
-        <% end %>
-    </div>
+      <div data-role="content">
+        <ul data-role="listview">
+          <% @cursos.each do |curso| %>
+              <li data-role="list-divider">
+                <%= Curso.find(curso).descripcion %>
+              </li>
+
+              <% notas_por_curso = @notas.where("curso_id=?", curso) %>
+              <% notas_por_curso.each do |nota| %>
+                <li style="font-family: monospace">
+                  <%= simple_format("#{TipoNota.find(nota.tipo_nota_id).descripcion.ljust(30, ".")} #{nota.nota}") %>
+                </li>
+              <% end %> 
+
+          <% end %>
+        </ul>
+      
+      </div>
+      <% end %>
     <% end %>
     
   </div><!-- /grid-a --> 
