--- a/app/views/usuarios/show.html.erb
+++ b/app/views/usuarios/show.html.erb
@@ -1,13 +1,16 @@
 <div id='Usuario' data-role="header">
   <h1>Detalles</h1>
-  <%= link_to 'Aceptar', usuarios_path, "data-icon" => "check", "data-mini" => "true"  %>
+  <% if @usuario.perfil_id == 1 %>
+    <%= link_to 'Aceptar', usuarios_path, "data-icon" => "check", "data-mini" => "true"  %>
+  <%  else %>
+    <%= link_to 'Aceptar', menu_path, "data-icon" => "check", "data-mini" => "true"  %>
+  <% end %>
 </div>
 
 
 <div data-role="content" style="clear: left">
   <b>Nombre:</b> <%= @usuario.nombre %> <p>
   <b>Usuario:</b> <%= @usuario.usuario %> <p>
-  <b>Clave:</b> <%= @usuario.clave %> <p>
   <b>Perfil:</b> <%= Perfil.find(@usuario.perfil_id).descripcion %> <p>
   <% if not @usuario.persona_vinculada_id.nil? %>
      <b>Persona vinculada:</b> <%=  PersonaVinculada.find(@usuario.persona_vinculada_id).apellidos_nombres %> <p>
@@ -16,7 +19,7 @@
 
 
 <div data-role="footer">
-  <% if can? :update, @usuario %>
+  <% if can? :update, @usuario && @usuario.perfil_id == 1 %>
     <%= link_to 'Editar', edit_usuario_path(@usuario), "class" => "ui-btn-left", "data-inline" => "true", "data-theme" => "a", "data-icon" => "gear", "data-mini" => "true" %>
   <% end %>
 </div>
