Cambio de layout carga de archivos

--- a/app/views/archivos/cargar_alumnos.html.erb
+++ b/app/views/archivos/cargar_alumnos.html.erb
@@ -5,7 +5,7 @@
                 <div class="block">                                                           
                     
                                         
-<%= form_tag({:controller => "archivos", :action => "cargar_alumnos"}, :method => "post", :multipart => true) do %>
+<%= form_tag({:controller => "archivos", :action => "cargar_alumnos"}, :method => "post", :multipart => true, "data-ajax" => "false") do %>
    <%= file_field_tag "archivo", :required => "required" %>
    <%= submit_tag "Cargar alumnos" %>
 <% end %>
@@ -14,8 +14,18 @@
      <p> El formato ingresado es incorrecto. Usted sólo puede subir archivos .txt </p>
   </div>
 <% end %>                                       
-                                        
-			
+              
+<% if !params[:res].nil? %>                   
+  <% if params[:res] == "1" %>
+    <div>
+       <p> Archivo cargado satisfactoriamente </p>
+    </div>
+  <% else %>
+    <div>
+       <p> No se pudo cargar el archivo </p>
+    </div>
+  <% end %> 
+<% end %>                  
                     
                 </div>
             </div>
