--- a/app/views/archivos2/cargar_vinculos.html.erb
+++ b/app/views/archivos2/cargar_vinculos.html.erb
@@ -5,7 +5,7 @@
                 <div class="block">                                                           
                     
                                         
-<%= form_tag({:controller => "archivos", :action => "cargar_vinculos"}, :method => "post", :multipart => true, "data-ajax" => "false") do %>
+<%= form_tag({:controller => "archivos", :action => "cargar_vinculos"}, :method => "post", :multipart => true) do %>
    <%= file_field_tag "archivo", :required => "required" %>
    <%= submit_tag "Cargar vínculos" %>
 <% end %>
@@ -14,18 +14,8 @@
      <p> El formato ingresado es incorrecto. Usted sólo puede subir archivos .txt </p>
   </div>
 <% end %>                                       
-                   
-<% if !params[:res].nil? %>                   
-  <% if params[:res] == "1" %>
-    <div>
-       <p> Archivo cargado satisfactoriamente </p>
-    </div>
-  <% else %>
-    <div>
-       <p> No se pudo cargar el archivo </p>
-    </div>
-  <% end %> 	
-<% end %>                  
+                                        
+			
                     
                 </div>
             </div>
