Control de errores carga de archivos

--- a/app/views/notas/cargar.html.erb
+++ b/app/views/notas/cargar.html.erb
@@ -21,9 +21,16 @@
        <p> Archivo cargado satisfactoriamente </p>
     </div>
   <% else %>
-    <div>
-       <p> No se pudo cargar el archivo </p>
-    </div>
+    <% if params[:res] == "0" %>
+      <div>
+         <p> No se pudo cargar el archivo </p>
+      </div>
+    <% else %>
+      <div>
+         <p> Ocurrieron errores al cargar el archivo. </p>
+         <p> <%= link_to "Ver el reporte de errores", "/logs/log.txt", :target => "_blank" %>  </p>
+      </div>         
+    <% end %>
   <% end %> 
 <% end %>                 
                     
