--- a/app/views/colegios/_form.html.erb
+++ b/app/views/colegios/_form.html.erb
@@ -33,10 +33,10 @@
     <%= f.label :correo %><br />
     <%= f.email_field :correo, :placeholder => "dirceu@example.com" %>
   </div>
-  <div class="field">
-    <%= f.label :logo %><br />
-    <%= f.text_field :logo %>
-  </div>
+  <!-- div class="field" -->
+    <!-- %= f.label :logo %><br -->
+    <!-- %= f.text_field :logo % -->
+  <!-- /div -->
   <div class="field">
     <%= f.label :director %><br />
     <%= f.text_field :director %>
