--- a/app/views/alumnos/alumnopersona.html.erb
+++ b/app/views/alumnos/alumnopersona.html.erb
@@ -6,7 +6,7 @@
     <% alumno_id = params[:alumno_persona_vinculada][:alumno_id] %>
   <% end %>
   <% seccion = AnioAlumno.find_by_anio_escolar_id_and_alumno_id(1, alumno_id).seccion_id %>
-  <%= link_to 'Regresar', alumnos_path(:seccion_id => seccion), "data-icon" => "back", "class" => "ui-btn-left", "data-mini" => "true" %>
+  <%= link_to 'Regresar', {:action => "alumnoseccion", :seccion_id => seccion}, "data-icon" => "back", "class" => "ui-btn-left", "data-mini" => "true" %>
 </div>
 
 <div data-role="header" style="text-align: center" data-theme="c">
@@ -18,7 +18,7 @@
     <% if !alumno_persona_vinculada.persona_vinculada_id.nil? %> 
     <li>
       <% if can? :read, alumno_persona_vinculada %>
-        <%= link_to simple_format(alumno_persona_vinculada.apellidos_nombres + " ("+ ListaValor.find_by_tabla_and_item(3, alumno_persona_vinculada.tipo_vinculo).descripcion+ ")"), [@alumno, alumno_persona_vinculada] %>
+        <%= link_to simple_format(alumno_persona_vinculada.apellidos_nombres), [@alumno, alumno_persona_vinculada] %>
       <% end %>
       
       <% if can? :destroy, alumno_persona_vinculada %>
