--- a/app/views/alumnos/alumnoseccion.html.erb
+++ b/app/views/alumnos/alumnoseccion.html.erb
@@ -4,17 +4,17 @@
     <%= link_to 'Registrar', new_alumno_path, "data-icon" => "plus", "class" => "ui-btn-right" %>
   <% end %>
 </div>
-<% if !params[:seccion_id].nil? %>  
+<% if !params[:seccion_id].nil? %>
   <% seccion = params[:seccion_id] %>
 <% end %>
 
 <div data-role="content" class="content-primary">
-  <%= form_tag(alumnos_path, {:method => :get, "data-ajax" => "false"}) do %>
+  <%= form_tag({:controller => "alumnos", :action => "alumnoseccion"}, {:method => :get, "data-ajax" => "false"}) do %>
     <div style="float: left">
       <%= simple_format("Sección:") %>
     </div>
     <div style="width: 160px; clear: left; float: left">
-      <%= collection_select(:seccion, :id, Seccion.seccion_anioescolar(1).order('grados.grado','seccion'), :id, :grado_seccion, {:selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>      
+      <%= collection_select(:seccion, :id, Seccion.seccion_anioescolar(1).order('grados.grado','seccion'), :id, :grado_seccion, {:selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
     </div>
     <div style="float: left">  
       <%= submit_tag "", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true", "data-iconpos" => "notext", :name => nil %>
@@ -24,9 +24,7 @@
   <ul data-role="listview" data-filter="true">
     <% @alumnos.each do |alumno| %>
     <li data-filtertext="<%= alumno.apellidos_nombres %>" >
-      <%= link_to alumno do %>
-        <%= simple_format(alumno.apellidos_nombres) %>         
-      <% end %>
+      <%= link_to simple_format(alumno.apellidos_nombres), {:action => "alumnopersona", :id => alumno} %>
     </li>
     <% end  %>
   </ul>
