--- a/app/views/alumnos/edit.html.erb
+++ b/app/views/alumnos/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing alumno</h1>
+<div data-role="header">
+  <h1>Editar alumno</h1>
+  <%= link_to 'Regresar', alumnos_path, "data-icon" => "back", "class" => "ui-btn-left", "data-mini" => "true" %>
+</div>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @alumno %> |
-<%= link_to 'Back', alumnos_path %>
