--- a/app/views/anios_alumnos/edit.html.erb
+++ b/app/views/anios_alumnos/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing anio_alumno</h1>
+<div data-role="header">
+    <h1>Editar matricula</h1>
+    <%= link_to 'Regresar', anios_alumnos_path, "data-icon" => "back", "class" => "ui-btn-left", "data-mini" => "true" %>
+</div>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @anio_alumno %> |
-<%= link_to 'Back', anios_alumnos_path %>
