--- a/app/views/anios_alumnos/index.html.erb
+++ b/app/views/anios_alumnos/index.html.erb
@@ -1,27 +1,42 @@
-<h1>Listing anios_alumnos</h1>
-
-<table>
-  <tr>
-    <th>Anio escolar</th>
-    <th>Alumno</th>
-    <th>Usuario</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @anios_alumnos.each do |anio_alumno| %>
-  <tr>
-    <td><%= anio_alumno.anio_escolar_id %></td>
-    <td><%= anio_alumno.alumno_id %></td>
-    <td><%= anio_alumno.usuario %></td>
-    <td><%= link_to 'Show', anio_alumno %></td>
-    <td><%= link_to 'Edit', edit_anio_alumno_path(anio_alumno) %></td>
-    <td><%= link_to 'Destroy', anio_alumno, confirm: 'Are you sure?', method: :delete %></td>
-  </tr>
+<div data-role="header">
+  <h1>Matricula</h1>
+  <% if can? :create, AnioAlumno %>
+    <%= link_to 'Registrar', new_anio_alumno_path, "data-icon" => "plus", "class" => "ui-btn-right" %>
+  <% end %>
+</div>
+<% if !params[:seccion_id].nil? %>  
+  <% seccion = params[:seccion_id] %>
 <% end %>
-</table>
 
-<br />
+<div data-role="content" class="content-primary">
+  <%= form_tag(anios_alumnos_path, {:method => :get, "data-ajax" => "false"}) do %>
+    <div style="float: left">
+      <%= simple_format("Sección:") %>
+    </div>
+    <div style="width: 160px; clear: left; float: left">
+      <%= collection_select(:seccion, :id, Seccion.seccion_anioescolar(1).order('grados.grado','seccion'), :id, :grado_seccion, {:selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
+    </div>
+    <div style="float: left">  
+      <%= submit_tag "", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true", "data-iconpos" => "notext", :name => nil %>
+    </div>
+  <% end %>
 
-<%= link_to 'New Anio alumno', new_anio_alumno_path %>
+  <ul data-role="listview" data-filter="true">
+    <% @anios_alumnos.each do |anio_alumno| %>
+    <li data-filtertext="<%= Alumno.find(anio_alumno.alumno_id).apellidos_nombres %>" >
+        <% if can? :update, anio_alumno %>
+          <% link_opcion = edit_anio_alumno_path(anio_alumno) %>
+        <% else %>
+            <% link_opcion = anio_alumno %>
+        <% end %>
+        <%= link_to link_opcion do %>
+            <%= simple_format(Alumno.find(anio_alumno.alumno_id).apellidos_nombres) %>
+        <% end %>
+      
+        <% if can? :destroy, anio_alumno %>
+            <%= link_to 'Eliminar', anio_alumno, confirm: '¿Seguro que desea eliminar el registro?', method: :delete, "data-icon" => "delete" %>
+        <% end %>
+    </li>
+    <% end  %>
+  </ul>
+</div>
