--- a/app/views/anios_alumnos/show.html.erb
+++ b/app/views/anios_alumnos/show.html.erb
@@ -1,20 +1,23 @@
-<p id="notice"><%= notice %></p>
+<div id='anio_escolar' data-role="header">
+  <h1>Detalles</h1>
+  <%= link_to 'Aceptar', anios_alumnos_path, "data-icon" => "check", "data-mini" => "true"  %>
+</div>
 
-<p>
-  <b>Anio escolar:</b>
-  <%= @anio_alumno.anio_escolar_id %>
-</p>
+<div data-role="content" style="clear: left">
+  <b>Alumno:</b> <%= Alumno.find(@anio_alumno.alumno_id).apellidos_nombres %> <p>
+  <b>Seccion:</b> <%= Seccion.find(@anio_alumno.seccion_id).grado_seccion %> <p>
+  <b>Activo:</b>
+  <% if @anio_alumno.estado == 1 %>
+    Si
+  <% else %>
+    No
+  <% end %>
+  <p>
+</div>
 
-<p>
-  <b>Alumno:</b>
-  <%= @anio_alumno.alumno_id %>
-</p>
+<div data-role="footer">
+  <% if can? :update, @anio_alumno %>
+    <%= link_to 'Editar', edit_anio_alumno_path(@anio_alumno), "class" => "ui-btn-left", "data-inline" => "true", "data-theme" => "a", "data-icon" => "gear", "data-mini" => "true" %>
+  <% end %>
+</div>
 
-<p>
-  <b>Usuario:</b>
-  <%= @anio_alumno.usuario %>
-</p>
-
-
-<%= link_to 'Edit', edit_anio_alumno_path(@anio_alumno) %> |
-<%= link_to 'Back', anios_alumnos_path %>
