--- a/app/views/usuarios/crear_masivo.html.erb
+++ b/app/views/usuarios/crear_masivo.html.erb
@@ -1,27 +1,25 @@
+
 <div data-role="header">
   <h1>Crear masivamente usuarios</h1>
 </div>
 
-<% if @usuario.errors.any? %>
-    <div id="error_explanation" data-role="header" data-theme="e">
-      <h2><%= pluralize(@usuario.errors.count, "error") %> impidieron que se grabe el registro:</h2>
-
-      <ul>
-      <% @usuario.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-<% end %>
-
-
-<% opcion = 1 %>
 
 <%= form_tag(grabarusuarios_path, {"data-ajax" => "false", "name" => "crearusuarios"}) do %>
   <div data-role="fieldcontain">
-    <%= hidden_field_tag 'colegio_id', "1" %>
-    <div class="actions">
-        <%= submit_tag "Procesar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true" %>
-    </div>
+    <fieldset data-role="controlgroup" >
+      <legend>Seleccione:</legend>
+      <input type="radio" name="creausuarios" id="creausuarios-1" value= 1  />
+      <label for="creausuarios-1">Crear usuarios y notificarlos por correo</label>
+      <input type="radio" name="creausuarios" id="creausuarios-2" value= 2 checked="checked" />
+      <label for="creausuarios-2">Solo crear usuarios</label>
+      <input type="radio" name="creausuarios" id="creausuarios-3" value= 3  />
+      <label for="creausuarios-3">Solo notificar a los usuarios por correo</label>
+    </fieldset>
+  </div>
+
+  <div class="actions">
+    <%= submit_tag "Procesar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true" %>
   </div>
 <% end %>
+
+<!--% end % -->
