--- a/app/views/anios_escolares/index.html.erb
+++ b/app/views/anios_escolares/index.html.erb
@@ -1,7 +1,7 @@
 <div data-role="header">
   <h1>Años escolares</h1>
   <% if can? :create, AnioEscolar %>
-    <%= link_to 'Registrar', new_anio_escolar_path, "data-icon" => "plus", "class" => "ui-btn-right" %>
+    <%= link_to 'Aperturar', new_anio_escolar_path, "data-icon" => "plus", "class" => "ui-btn-right" %>
   <% end %>
 </div>
 
