--- a/app/views/listas_valores/new.html.erb
+++ b/app/views/listas_valores/new.html.erb
@@ -1,5 +1,5 @@
 <div data-role="header">
-  <h1>Crear variable</h1>
+  <h1>Crear valor de la variable</h1>
   <%= link_to 'Regresar', listas_valores_path, "data-icon" => "back", "class" => "ui-btn-left", "data-mini" => "true" %>
 </div>
 
