--- a/app/views/alumnos/alumnoseccion.html.erb
+++ b/app/views/alumnos/alumnoseccion.html.erb
@@ -1,8 +1,5 @@
 <div data-role="header">
   <h1>Alumnos</h1>
-  <% if can? :create, Alumno %>
-    <%= link_to 'Registrar', new_alumno_path, "data-icon" => "plus", "class" => "ui-btn-right" %>
-  <% end %>
 </div>
 <% if !params[:seccion_id].nil? %>
   <% seccion = params[:seccion_id] %>
@@ -14,7 +11,7 @@
       <%= simple_format("Sección:") %>
     </div>
     <div style="width: 160px; clear: left; float: left">
-      <%= collection_select(:seccion, :id, Seccion.seccion_anioescolar(1).order('grados.grado','seccion'), :id, :grado_seccion, {:selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
+      <%= collection_select(:seccion, :id, Seccion.por_anioescolar.order('grados.grado','seccion'), :id, :grado_seccion, {:selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
     </div>
     <div style="float: left">  
       <%= submit_tag "", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true", "data-iconpos" => "notext", :name => nil %>
