--- a/app/views/anios_alumnos/index.html.erb
+++ b/app/views/anios_alumnos/index.html.erb
@@ -1,5 +1,5 @@
 <div data-role="header">
-  <h1>Matricula</h1>
+  <h1>Asignar alumnos a secciones</h1>
   <% if can? :create, AnioAlumno %>
     <%= link_to 'Registrar', new_anio_alumno_path, "data-icon" => "plus", "class" => "ui-btn-right" %>
   <% end %>
@@ -14,7 +14,7 @@
       <%= simple_format("Sección:") %>
     </div>
     <div style="width: 160px; clear: left; float: left">
-      <%= collection_select(:seccion, :id, Seccion.seccion_anioescolar(1).order('grados.grado','seccion'), :id, :grado_seccion, {:selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
+      <%= collection_select(:seccion, :id, Seccion.por_anioescolar.order('grados.grado','seccion'), :id, :grado_seccion, {:selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
     </div>
     <div style="float: left">  
       <%= submit_tag "", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true", "data-iconpos" => "notext", :name => nil %>
