--- a/app/views/menus/main.html.erb
+++ b/app/views/menus/main.html.erb
@@ -12,8 +12,12 @@
 
       <% if [1,2,3].include? current_user.perfil_id %>
         <% if [1,3].include? current_user.perfil_id %>
+          <li><a href="<%= tipos_eventos_path %>">Configurar</a></li>
+        <% end %>
+        
+        <% if [1,3].include? current_user.perfil_id %>
           <li><a href="<%= cuadernos_controles_path %>">Registrar</a></li>
-        <% end %>  
+        <% end %>
 
         <% if [1,2].include? current_user.perfil_id %>
           <li>
@@ -43,12 +47,20 @@
         <% end %>
 
         <% if [1,3].include? current_user.perfil_id %>
+          <li><a href="<%= vincularpersonas_path(:seccion_id => 0) %>">Vincular personas (nueva version)</a></li>
+        <% end %>
+
+        <% if [1,3].include? current_user.perfil_id %>
           <li><a href="<%= salida_path %>">Salida de alumnos</a></li>
         <% end %>
 
         <% if [1,3].include? current_user.perfil_id %>
           <li><a href="<%= new_asistencia_path %>">Registrar asistencia de alumnos</a></li>
         <% end %>
+        
+        <% if [1,3].include? current_user.perfil_id %>
+          <li><a href="<%= consulta_asistencia_path %>">Consultar asistencias</a></li>
+        <% end %>        
       <% end %>
 
 
@@ -82,6 +94,7 @@
         <li><a href="<%= permisos_path %>">Permisos</a></li>
         <li><a href="<%= perfiles_path %>">Perfiles</a></li>
         <li><a href="<%= usuarios_path %>">Usuarios</a></li>
+        <li><a href="<%= crearusuarios_path %>">Crear masivamente usuarios y notificarlos por correo</a></li>
       <% end %>
         
         
@@ -110,6 +123,12 @@
         <li><%= link_to "Cargar alumnos", :controller => "archivos", :action => "cargar_alumnos" %> </li>
         <li><%= link_to "Cargar padres", :controller => "archivos", :action => "cargar_padres" %> </li>
         <li><%= link_to "Cargar vínculos", :controller => "archivos", :action => "cargar_vinculos" %> </li>
+        <li><a href="<%= listas_valores_path %>">Variables del sistema</a></li>
+        <li><a href="<%= grados_path %>">Grados</a></li>
+        <li><a href="<%= secciones_path %>">Secciones</a></li>
+        <li><a href="<%= colegios_path %>">Colegios</a></li>
+        <li><a href="<%= anios_escolares_path %>">Años escolares</a></li>
+        <li><a href="<%= anios_alumnos_path(:seccion_id => 0) %>">Asignar alumnos a secciones</a></li>
       <% end %>
     </ul>
     
